Interface Operation Add it, Factory Working, Receipt txt with data and enhaced sales summary